scooter/tests/snapshots/app__performing_replacement_compact_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1571
expression: app.keymaps_compact()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
