scooter/tests/snapshots/app__popup_compact_keymaps.snap
---
source: scooter/tests/app.rs
expression: app.keymaps_compact()
---
[
    (
        "<enter>",
        "jump to results",
    ),
    (
        "<tab>",
        "focus next",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "close popup",
    ),
]
