scooter/tests/snapshots/app__results_without_errors_all_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1610
expression: app.keymaps_all()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit / close popup",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
