scooter/tests/snapshots/app__results_without_errors_compact_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1609
expression: app.keymaps_compact()
---
[
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
