scooter/tests/snapshots/app__search_complete_all_keymaps.snap
---
source: scooter/tests/app.rs
expression: app.keymaps_all()
---
[
    (
        "<enter>",
        "replace selected",
    ),
    (
        "<space>",
        "toggle",
    ),
    (
        "a",
        "toggle all",
    ),
    (
        "v",
        "toggle multi-select mode",
    ),
    (
        "<A-;>",
        "flip multi-select direction",
    ),
    (
        "e",
        "open in editor",
    ),
    (
        "<C-o>",
        "back",
    ),
    (
        "j",
        "up",
    ),
    (
        "k",
        "down",
    ),
    (
        "<C-u>",
        "up half a page",
    ),
    (
        "<C-d>",
        "down half a page",
    ),
    (
        "<C-b>",
        "up a full page",
    ),
    (
        "<C-f>",
        "down a full page",
    ),
    (
        "g",
        "jump to top",
    ),
    (
        "G",
        "jump to bottom",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit / close popup / exit multi-select",
    ),
    (
        "<C-c>",
        "quit",
    ),
]
