scooter/tests/snapshots/app__search_complete_compact_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1543
expression: app.keymaps_compact()
---
[
    (
        "<enter>",
        "replace selected",
    ),
    (
        "<space>",
        "toggle",
    ),
    (
        "<C-o>",
        "back",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
