scooter/tests/snapshots/app__search_fields_compact_keymaps.snap
---
source: scooter/tests/app.rs
assertion_line: 1527
expression: app.keymaps_compact()
---
[
    (
        "<enter>",
        "search",
    ),
    (
        "<tab>",
        "focus next",
    ),
    (
        "<C-r>",
        "reset",
    ),
    (
        "<C-h>",
        "help",
    ),
    (
        "<esc>",
        "quit",
    ),
]
